gitops/demo-app/notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  namespace: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9091"
        prometheus.io/path: "/metrics"
        k8s.grafana.com/scrape: "true"
        k8s.grafana.com/job: "notification-service"
        k8s.grafana.com/metrics.portNumber: "9091"
        k8s.grafana.com/metrics.path: "/metrics"
    spec:
      containers:
        - name: notification
          image: 075472844803.dkr.ecr.us-east-1.amazonaws.com/demo-grafana-notification:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9091
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: notification
  namespace: demo-app
spec:
  selector:
    app: notification
  ports:
    - port: 9091
      targetPort: 9091
