gitops/demo-app/order-agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-agent
  namespace: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-agent
  template:
    metadata:
      labels:
        app: order-agent
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9096"
        prometheus.io/path: "/metrics"
        k8s.grafana.com/scrape: "true"
        k8s.grafana.com/job: "order-agent"
        k8s.grafana.com/metrics.portNumber: "9096"
        k8s.grafana.com/metrics.path: "/metrics"
    spec:
      containers:
        - name: order-agent
          image: 075472844803.dkr.ecr.us-east-1.amazonaws.com/demo-grafana-order-agent:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9096
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: order-agent
  namespace: demo-app
spec:
  selector:
    app: order-agent
  ports:
    - port: 9096
      targetPort: 9096
