gitops/demo-app/order-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-worker
  namespace: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-worker
  template:
    metadata:
      labels:
        app: order-worker
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: order-worker
          image: 075472844803.dkr.ecr.us-east-1.amazonaws.com/demo-grafana-worker:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: order-worker
  namespace: demo-app
spec:
  selector:
    app: order-worker
  ports:
    - port: 9090
      targetPort: 9090
