gitops/demo-app/payment-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-gateway
  namespace: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-gateway
  template:
    metadata:
      labels:
        app: payment-gateway
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9092"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: payment-gateway
          image: 075472844803.dkr.ecr.us-east-1.amazonaws.com/demo-grafana-payment-gateway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9092
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: payment-gateway
  namespace: demo-app
spec:
  selector:
    app: payment-gateway
  ports:
    - port: 9092
      targetPort: 9092
