gitops/demo-app/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/metrics"
        k8s.grafana.com/scrape: "true"
        k8s.grafana.com/job: "demo-api"
        k8s.grafana.com/metrics.portNumber: "8080"
        k8s.grafana.com/metrics.path: "/metrics"
    spec:
      containers:
        - name: api
          image: 075472844803.dkr.ecr.us-east-1.amazonaws.com/demo-grafana-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: demo-app
spec:
  selector:
    app: api
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: demo-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443},{"HTTP":80}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:075472844803:certificate/aaba3efe-95bb-4629-8f4c-55bcecd9ee81
    external-dns.alpha.kubernetes.io/hostname: demo-api.lab.trdevops.com.br
spec:
  ingressClassName: alb
  rules:
    - host: demo-api.lab.trdevops.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8080
  tls:
    - hosts:
        - demo-api.lab.trdevops.com.br
      secretName: demo-api-tls
